src/objects/Contact_Network_Member__c.object
<CustomObject>
    <description>Members of a Network excluding the Hub Contact (i.e. the contact Owning the Network)</description>
    <fields>
        <fullName>Account_Loyalty_D__c</fullName>
        <formula>TEXT( Contact_Network_Member__r.Account.Loyalty_Implants_Basic__c )</formula>
        <label>Account Loyalty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Volume_D__c</fullName>
        <formula>TEXT(Contact_Network_Member__r.Account.Volume_Implants__c)</formula>
        <label>Account Volume</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ankylos_User__c</fullName>
        <formula>IF ( Contact_Network_Member__r.Ankylos_User__c =TRUE, &quot;YES&quot;, &quot;NO&quot;)</formula>
        <inlineHelpText>Based on setting on Contact. If this Contact is an Ankylos User and you want that reflected on the Network, please update this on the Contact.</inlineHelpText>
        <label>Ankylos User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astra_Tech_User__c</fullName>
        <formula>IF( Contact_Network_Member__r.Astra_Tech_User__c = TRUE, &quot;YES&quot;, &quot;NO&quot;)</formula>
        <inlineHelpText>Based on setting on Contact. If this Contact is an Astra Tech User and you want that reflected on the Network, please update this on the Contact.</inlineHelpText>
        <label>Astra Tech User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Network_Member__c</fullName>
        <label>Contact Network Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Member of Networks</relationshipLabel>
        <relationshipName>Network_Contact_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Main_Competitor_D__c</fullName>
        <formula>Contact_Network_Member__r.Account.Main_Competitor_D_Text__c</formula>
        <label>Main Competitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <label>Network</label>
        <referenceTo>Network__c</referenceTo>
        <relationshipLabel>Contact Network Members</relationshipLabel>
        <relationshipName>Contact_Network_Members</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Profession__c</fullName>
        <formula>TEXT(Contact_Network_Member__r.Profession__c)</formula>
        <label>Profession</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XiVe_User__c</fullName>
        <formula>IF ( Contact_Network_Member__r.XiVE_User__c = TRUE, &quot;YES&quot;, &quot;NO&quot;)</formula>
        <inlineHelpText>Based on setting on Contact. If this Contact is an XiVe User and you want that reflected on the Network, please update this on the Contact.</inlineHelpText>
        <label>XiVe User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_CFEs_CY_D__c</fullName>
        <formula>Contact_Network_Member__r.CFEs_Implants_CY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of CFEs CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_CFEs_LY_D__c</fullName>
        <formula>Contact_Network_Member__r.CFEs_Implants_CY_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of CFEs LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contact Network Member</label>
    <nameField>
        <displayFormat>NETM-{000000}</displayFormat>
        <label>Contact Network Member #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Network Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>